# obsrv-python-sdk

./: pyproject.toml
obsrv/common/: __init__.py  exception.py
obsrv/connector/: __init__.py  metrics_collector.py  registry.py
obsrv/connector/batch/: __init__.py  obsrv_dataset.py  source.py
obsrv/job/batch/: __init__.py
obsrv/models/: __init__.py  data_models.py
obsrv/utils/: __init__.py  config.py  db_util.py  encyption.py  logger.py
tests/: batch_setup.py  create_tables.py  test_batch_connector.py  test_conf.yaml  test_connector_registry.py  test_encryption_utils.py  test_setup.py
tests/config/: config.template.yaml
